--- a/style.css
+++ b/style.css
@@ -62,57 +62,144 @@
     margin-right: 90px;
 }
 
+.ban-img{
+    width: 400px;
+    border-radius: 40px;
+}
+
 .banner{
+    margin: 40px 320px 60px 320px ;
     display: flex;
-    flex-direction: row;
-    margin-top: 30px;
+    gap: 70px;
     align-items: center;
-
-}
-
-.my-image{
-   width: 45% !important;
-   height: 50% !important;
-}
-
-
-.banner-text{
-    text-align: justify;
 }
 
 .hi{
     font-family: "poppins";
     font-weight: 200;
-    padding: 15px;
-    font-size: 20px;
-    line-height: 15px;
+    font-size: 25px;   
 }
 
-.name{
+.banner-text{
+    gap: 40px;
+}
+
+.ade{
     font-family: "poppins";
-    font-weight: 200;
-    font-size: 30px;
-    line-height: 15px;
-    display: flex;
-    gap: 15px;
-}
-
-.adedoyin{
     font-weight: 600;
-}
-
-.field{
-    font-family: "poppins";
-    font-weight: 200;
-    font-size: 30px;
-    line-height: 30px;
-    margin-top: 10px;
-}
-
-.see-more{
-    font-family: "poppins";
-    font-weight: 200;
-    font-size: 30px;
-    line-height: 30px;
+    font-size: 25px;
     
+}
+
+.ade-hi{
+    display: flex;
+    gap: 10px;
+}
+
+.line{
+    font-family: "poppins";
+    font-weight: 700;
+    font-size: 30px;
+    padding-left: 70px;
+    margin-top: 100px;
+}
+
+.project{
+   margin-top: 30px;
+}
+
+.saas{
+    display: flex;
+    gap: 40px;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+.saas-1{
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.saas-text{
+    font-family: "poppins";
+    font-weight: 700;
+    font-size: 30px;
+    background-color: black;
+    width: 100%;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+.saas-links{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 80px;
+    padding: 30px;
+}
+
+.saas-git{
+    padding: 15px;
+    cursor: pointer;
+    background-color: aqua;
+    transition: all 0.5s ease 0s;
+    border: none;
+    border-radius: 30px;
+    font-family: "poppins";
+    font-weight: 350;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+.saas-netlify{
+    padding: 15px;
+    cursor: pointer;
+    background-color: aqua;
+    transition: all 0.5s ease 0s;
+    border: none;
+    border-radius: 30px;
+    font-family: "poppins";
+    font-weight: 350;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+.contacts{
+    background-color: rgb(19, 18, 18);
+    color: whitesmoke;
+    padding: 30px;
+   
+}
+
+.line-1{
+    border: 1px solid whitesmoke;
+    width: 100%;
+}
+
+.contact-details{
+   gap: 20px;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   justify-content: center;
+   margin-bottom: 40px;
+}
+
+.social-links{
+    margin-top: 0;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px;
+}
+
+.saas-img{
+    width: 1300px;
 }
